--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
     environment:
       - FLASK_ENV=production
       - FLASK_APP=app.py
+      - PORT=5000
     restart: unless-stopped
     
     # Security settings (though app is intentionally vulnerable)
